[tool.poetry]
name = "bible-alignments"
version = "0.4"
description = "Word-level alignments for Bibles, including both automatic alignments and manually corrected alignments."
authors = ["Sean Boisen <sean.boisen@biblica.com>"]
license = "MIT"
readme = "README.md"
keywords = ["Bible", "alignment", "Bible alignment"]
repository = "https://github.com/Clear-Bible/Alignments"
#documentation = "https://sboisen.github.io/alignments/"
packages = [
  {include = "bible_alignments"},
]
# need more here
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Religion",
    "License :: OSI Approved :: MIT License",
    "Topic :: Religion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE", 
    "data/languages/*",
    # lots of larger files: just include BSB data
    "data/alignments/eng/BSB/*",
    "data/sources/BSB.tsv",
    "data/sources/SBLGNT.tsv",
    "data/targets/WLC.tsv",
    "data/sources/references/*.txt",
    "data/catalog.tsv",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jsonlines = "^3.1.0"
tomli = "^2.0.1"
jupyterlab = "^3.6.1"
biblelib = ">=0.3"
django = "^4.2.2"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
pydantic = "^2.1.1"
pandas = "^2.1.0"
unicodecsv = "^0.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

